# github-bot

./: .env  .gitignore  Cargo.toml  README.md  config.yml
.github/workflows/: build.yml  patrol.yml
examples/: patrol.yml
src/: config.rs  main.rs  slack.rs
tests/: test_config.rs
