[package]
name = "github-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
itertools = "0.14.0"
lazy-regex = "3.4.1"
log = "0.4.26"
octocrab = "0.43.0"
regex = "1.11.1"
reqwest = "0.12.12"
serde = "1.0.218"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
slack-hook = "0.9.1"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
url = "2.5.4"
